<resources>
    <string name="app_name">KontakHub</string>
    <string name="btn_register">Daftar</string>

    <string name="toast_no_internet">Tidak ada koneksi Internet</string>
    <string name="toast_network_error">Periksa kembali koneksi internet anda</string>
    <string name="toast_server_error">Server sedang diperbaiki, mohon maaf atas ketidak nyamanannya</string>
    <string name="toast_timeout">Timeout. Silakan coba beberapa saat lagi</string>
    <string name="toast_terjadi_kesalahan">Terjadi kesalahan, silakan coba beberapa saat lagi. Kemungkinan kesalahan dari server atau sesi anda telah habis. Jika masih bermasalah silahkan keluar kemudian login kembali</string>
    <string name="btn_submit_register">Daftar</string>
    <string name="btn_submit_login">Login</string>
    <string name="atau">atau</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_register">Daftar</string>
    <string name="aggreement">Saya setuju dengan <b>Syarat &amp; Ketentuan</b> dan <b>Kebijakan Privasi</b></string>
    <string name="txt_email">Email</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="txt_fullname">Nama Lengkap</string>
    <string name="txt_password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_submit_logout">Logout</string>
    <string name="tentang">Tentang</string>
    <string name="akun">Akun</string>
    <string name="img_desc_profile">Profile</string>
    <string name="title_account">Account</string>
    <string name="img_desc_back">Image Back</string>
    <string name="btn_submit_tryagain">Coba Lagi</string>
    <string name="title_save_contact">Save Contact</string>
    <string name="title_share_contact">Share Contact</string>
    <string name="title_kontak_hub">Kontak Hub</string>
    <string name="txt_topup">Topup</string>
    <string name="txt_balance">Total Credit</string>
    <string name="img_desc_refresh">Refresh</string>
    <string name="txt_nickname">Nama Panggilan</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="txt_greeting">Sapaan</string>
    <string name="txt_address">Alamat</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_instagram">Instagram</string>
    <string name="txt_website">Website</string>
    <string name="txt_gender">Jenis Kelamin</string>
    <string name="txt_tgllahir">Tanggal Lahir</string>
    <string name="txt_profession">Profesi</string>
    <string name="txt_hobi">Hobi</string>
    <string name="txt_religion">Agama</string>
    <string name="txt_interest">Ketertarikan</string>
    <string name="txt_relationship_status">Status Hubungan</string>
    <string name="txt_business_name">Nama Bisnis</string>
    <string name="txt_business_type">Jenis Bisnis</string>
    <string name="txt_product">Produk</string>
    <string name="title_setting_contact">Setting Contact</string>
    <string name="allow_share_profile">Izinkan Share Profile</string>
    <string name="txt_save_contact_friend_by">Menyimpan Kontak berdasarkan</string>
    <string name="txt_save_mycontact_by">Membagikan Kontak berdasarkan</string>
    <string name="txt_limit_save_mycontact">Batas Kontak Saya di Simpan</string>
    <string name="txt_limit_save_contact_friend">Batas Menyimpan Kontak Teman</string>
    <string name="btn_save">Simpan</string>
    <string name="title_article">Artikel</string>
    <string name="default_notification_channel_id">channel contacthub</string>
    <string name="title_withdraw">Withdraw</string>
    <string name="txt_bank_name">Nama Bank</string>
    <string name="txt_no_rek">No Rekening</string>
    <string name="txt_nama_pemilik_rekening">Nama Pemilik Rekening</string>
    <string name="txt_amount_withdraw">Total Withdraw</string>
    <string name="btn_request_withdraw">Request Withdraw</string>
    <string name="title_detail_contact">Info Kontak</string>
    <string name="txt_username">Username</string>
    <string name="txt_tokopedia">Tokopedia</string>
    <string name="txt_bukalapak">Bukalapak</string>
    <string name="txt_shopee">Shopee</string>
    <string name="btn_ubah">Ubah</string>
    <string name="title_edit_cover">Edit Cover Contact</string>
    <string name="title_cari_interest">Cari Ketertarikan</string>
    <string name="btn_choose">Pilih</string>
    <string name="txt_provinsi">Provinsi</string>
    <string name="txt_kota">Kota</string>
    <string name="btn_save_contact">Simpan</string>
    <string name="title_feed">Ads Feed</string>
    <string name="txt_title">Judul</string>
    <string name="txt_description">Deskripsi</string>
    <string name="txt_category">Kategori</string>
    <string name="txt_image">Gambar</string>
    <string name="title_form_feed">Form Feed</string>
    <string name="txt_status">Status</string>
    <string name="txt_phone">No HP</string>
    <string name="btn_hubungi">Kirim Pesan</string>
    <string name="title_ads_feed">Ads Feed</string>
    <string name="txt_reason">Alasan ditolak</string>

</resources>