<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        android:elevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/maisonneuebold"
                android:text="@string/title_form_feed"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/md_white_1000"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtReason"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/md_red_400"
                android:textColor="@color/md_white_1000"
                android:fontFamily="@font/sfuidisplaymedium"
                android:text="-"
                android:textSize="@dimen/text_size_12sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp">

                <EditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/txt_fullname"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:hint="@string/txt_title"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:singleLine="true"
                    android:textColor="@color/colorTextView"
                    android:textColorHint="@color/md_white_1000"
                    android:textSize="@dimen/text_size_14sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/sfuidisplaymedium"
                android:text="@string/txt_category"
                android:textSize="@dimen/text_size_12sp" />

            <Spinner
                android:id="@+id/spinCategory"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/txt_fullname"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:hint="@string/txt_phone"
                    android:inputType="phone"
                    android:paddingBottom="16dp"
                    android:singleLine="true"
                    android:textColor="@color/colorTextView"
                    android:textColorHint="@color/md_white_1000"
                    android:textSize="@dimen/text_size_14sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/txt_description"/>
            <EditText
                android:id="@+id/edtDescription"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle_white_slim"
                android:layout_marginRight="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="15dp"
                android:layout_marginLeft="15dp"
                android:gravity="top"
                android:layout_marginBottom="20dp"
                android:hint="Deskripsi"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/sfuidisplaymedium"
                android:text="@string/txt_image"
                android:textSize="@dimen/text_size_12sp" />
            <ImageView
                android:id="@+id/imgFeed"
                android:layout_margin="10dp"
                android:src="@drawable/placeholder_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
            <TextView
                android:textColor="@color/md_red_500"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="Rekomendasi ukuran gambar adalah : 600x330 px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/sfuidisplaymedium"
                android:text="@string/txt_status"
                android:textSize="@dimen/text_size_12sp" />

            <Spinner
                android:id="@+id/spinStatus"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp" />

            <Button
                android:id="@+id/btnSimpan"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:background="@drawable/btn_primary_round"
                android:fontFamily="@font/sfuidisplaymedium"
                android:text="@string/btn_save"
                android:textColor="@color/md_white_1000" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>