<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        android:elevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/maisonneuebold"
                android:text="@string/title_register"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/md_white_1000"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/sfuidisplaymedium"
                android:text="@string/txt_greeting"
                android:textSize="@dimen/text_size_12sp" />

            <Spinner
                android:id="@+id/spinGreeting"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/TextLabel">
                <EditText
                    android:id="@+id/edtNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:textColorHint="@color/md_white_1000"
                    android:textColor="@color/colorTextView"
                    android:singleLine="true"
                    android:inputType="text"
                    android:autofillHints="@string/txt_fullname"
                    android:hint="@string/txt_fullname"
                    android:textSize="@dimen/text_size_14sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/TextLabel">
                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:textColorHint="@color/md_white_1000"
                    android:textColor="@color/colorTextView"
                    android:singleLine="true"
                    android:inputType="text"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:autofillHints="@string/txt_username"
                    android:hint="@string/txt_username"
                    android:textSize="@dimen/text_size_14sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/TextLabel">
                <EditText
                    android:id="@+id/edtWhatsApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:textColorHint="@color/md_white_1000"
                    android:textColor="@color/colorTextView"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:autofillHints="@string/whatsapp"
                    android:hint="@string/whatsapp"
                    android:textSize="@dimen/text_size_14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/TextLabel">
                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:textColorHint="@color/md_white_1000"
                    android:textColor="@color/colorTextView"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:autofillHints="@string/txt_email"
                    android:hint="@string/txt_email"
                    android:textSize="@dimen/text_size_14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/TextLabel">
                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:textColorHint="@color/md_white_1000"
                    android:textColor="@color/colorTextView"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:autofillHints="@string/txt_password"
                    android:hint="@string/txt_password"
                    android:textSize="@dimen/text_size_14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_16dp">
                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:text="@string/aggreement"
                    android:textSize="@dimen/text_size_12sp"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnDaftar"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:fontFamily="@font/sfuidisplaymedium"
                android:background="@drawable/btn_primary_round"
                android:enabled="false"
                android:text="@string/btn_register"
                android:textColor="@color/md_white_1000"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>