<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        android:elevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/maisonneuebold"
                android:text="@string/title_withdraw"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/md_white_1000"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/TextLabel">
                <EditText
                    android:id="@+id/edtBank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:textColorHint="@color/md_white_1000"
                    android:textColor="@color/colorTextView"
                    android:singleLine="true"
                    android:inputType="text"
                    android:autofillHints="@string/txt_bank_name"
                    android:hint="@string/txt_bank_name"
                    android:textSize="@dimen/text_size_14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/TextLabel">
                <EditText
                    android:id="@+id/edtNoRek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:textColorHint="@color/md_white_1000"
                    android:textColor="@color/colorTextView"
                    android:singleLine="true"
                    android:inputType="number"
                    android:autofillHints="@string/txt_no_rek"
                    android:hint="@string/txt_no_rek"
                    android:textSize="@dimen/text_size_14sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/TextLabel">
                <EditText
                    android:id="@+id/edtNamaPemilikRekening"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:textColorHint="@color/md_white_1000"
                    android:textColor="@color/colorTextView"
                    android:singleLine="true"
                    android:inputType="text"
                    android:autofillHints="@string/txt_nama_pemilik_rekening"
                    android:hint="@string/txt_nama_pemilik_rekening"
                    android:textSize="@dimen/text_size_14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/TextLabel">
                <EditText
                    android:id="@+id/edtTotalWithdraw"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:fontFamily="@font/sfuidisplaymedium"
                    android:textColorHint="@color/md_white_1000"
                    android:textColor="@color/colorTextView"
                    android:singleLine="true"
                    android:inputType="text"
                    android:autofillHints="@string/txt_amount_withdraw"
                    android:hint="@string/txt_amount_withdraw"
                    android:textSize="@dimen/text_size_14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnWithdraw"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:fontFamily="@font/sfuidisplaymedium"
                android:background="@drawable/btn_primary_round"
                android:text="@string/btn_request_withdraw"
                android:textColor="@color/md_white_1000"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>